# rheojax

./: .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DELIVERABLES.md  DESIGN.md  DMTA_MODEL_CATALOG.md  FIXES_SUMMARY.md  FLOW_MODELS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TASK11.md  MANIFEST.in  Makefile  NOTEBOOK_FIX_OSCILLATION.md  OPTIMIZATION_LEDGER.md  OPTIMIZATION_REPORT.md  PHASE_1_DOCUMENTATION_COMPLETE.md  PHASE_1_TESTING_SUMMARY.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  SPP_GAP_MATRIX_SKELETON.md  TASK_GROUP_12_FILES.txt  TASK_GROUP_12_SUMMARY.md  TASK_GROUP_14_TRANSFORMS_COMPLETE.md  TASK_GROUP_8_COMPLETE.md  TESTING_QUICK_REFERENCE.md  TESTING_REPORT.md  manual_performance_benchmark.py  performance_results.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_fix.py  (+1 more)
.claude/: settings.json
.claude/hooks/: approve_configs.sh  config.json  enforce_package_managers.sh  multi_linter.sh  stop_config_guardian.sh  test_hook.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  mirror.yml  release.yml  security.yml
.github/workflows.disabled/: ci.yml  release.yml
.github/workflows_disabled/: ci.yml  dependabot-auto-merge.yml  security.yml
.investigation/: timeout-fixes-report.md
.reports/: codemap-diff.txt
analysis/rheojax/: ARCHITECTURE.mmd  ASSESSMENT.md
benchmarks/: benchmark_ikh.py
docs/: .gitignore  100_PERCENT_PASS_RATE_PLAN.md  BAYESIAN_QUICK_START.md  BAYESIAN_WORKFLOW_SUMMARY.md  CHECKPOINT_91_PERCENT.md  CRITICAL_FIX_STATUS.md  FINAL_FIX_SUMMARY.md  FINAL_VALIDATION_REPORT.md  Makefile  PHASE2_TESTING_COMPLETE.md  PHASE_2_ACCEPTANCE.md  PHASE_2_ANNOUNCEMENT.md  PHASE_2_DOCUMENTATION_COMPLETE.md  PHASE_2_FINAL_STATUS_REPORT.md  PHASE_2_RELEASE_APPROVAL.md  README.md  RELEASE_NOTES_v0.2.0.md  SESSION_FINAL_PROGRESS.md  SESSION_FINAL_STATUS.md  SESSION_PROGRESS_REPORT.md  STRUCTURE.md  TEST_ANALYSIS_POST_FIX.md  architecture-overview.md  architecture-review-2026-04-06.md  model-test-mode-compatibility.md  model_selection_guide.md  performance_benchmarks.md  pipeline_user_guide.md  requirements-docs.txt  tech-stack.md  test_execution_summary.md  validation_report.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/agents/: domain.md
docs/design/: protocol_driven_inventory.md
docs/examples/: README.md  advanced_workflows.ipynb  basic_model_fitting.ipynb  mastercurve_generation.ipynb  multi_model_comparison.ipynb  multi_technique_fitting.ipynb
docs/internal/: spp_parity_reference.md  spp_parity_status.md  v032_performance_analysis.md
docs/patches/: 01_mcmc_config_fixture.patch  02_validation_slow_markers.patch  03_reduce_parametrization.patch  04_makefile_updates.patch  05_pytest_markers.patch
docs/plans/: 2026-03-02-transform-page-redesign.md
docs/source/: api_reference.rst  conf.py  contributing.rst  development_status.rst  index.rst  installation.rst  migration_guide.rst  quickstart.rst  user_guide.rst
docs/verification/: classical_lve_equations.md  dmt_literature_verification.md  epm_validation_report_2026-03-29.md  fikh_validation_report_2026-03-29.md  fluidity_saramito_equations.rst  fractional_models_equation_verification.md  giesekus_math_verification.md  gmm_canonical_equations.rst  hl_model_equations.md  hvm_literature_review.md  ikh_literature_verification.md  itt_mct_literature_equations.md  saos_validity_transient_networks.md  spp_equations_verification.md  tnt_equations_verification.rst  vitrimer_nanocomposite_constitutive_models.md  vlb_equation_verification.md
examples/: .notebook_template.ipynb  .placeholder_template.ipynb  README.md  bayesian_workflow_demo.py  tensorial_epm_examples.ipynb  tensorial_epm_visualization_demo.py  tensorial_viz_quickstart.py  test_mode_detection_demo.py  trios_chunked_reading_example.py
examples/_run_logs/: issue_inventory.md
examples/advanced/: 01-multi-technique-fitting.ipynb  02-batch-processing.ipynb  03-custom-models.ipynb  04-fractional-models-deep-dive.ipynb  05-performance-optimization.ipynb  06-frequentist-model-selection.ipynb  07-trios_chunked_reading_example.ipynb  08-generalized_maxwell_fitting.ipynb  09-sgr-soft-glassy-rheology.ipynb  10-spp-laos-tutorial.ipynb
examples/basic/: 01-maxwell-fitting.ipynb  02-zener-fitting.ipynb  03-springpot-fitting.ipynb  04-bingham-fitting.ipynb  05-power-law-fitting.ipynb
examples/bayesian/: 01-bayesian-basics.ipynb  02-prior-selection.ipynb  03-convergence-diagnostics.ipynb  04-model-comparison.ipynb  05-uncertainty-propagation.ipynb  06-bayesian_workflow_demo.ipynb  07-gmm_bayesian_workflow.ipynb  08-spp-laos.ipynb  09-spp-rheojax-workflow.ipynb
examples/data/: README.md
examples/dmt/: 01_dmt_flow_curve.ipynb  02_dmt_startup_shear.ipynb  03_dmt_stress_relaxation.ipynb  README.md  (+3 more)
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
rheo/: __init__.py  py.typed
rheojax/: __init__.py
scripts/: check_notebook_execution.py  clean_notebooks.py  fix_fluidity_notebooks.py  fix_hl_notebooks.py  fix_notebook_syspath.py  fix_stz_notebooks.py  gen_inputs.py  micro_benchmarks.py  notebook_execution_baseline.txt  profile_comprehensive.py  profile_pipeline.py  run_all_notebooks.py  run_all_notebooks_96h.py  run_classical_notebooks.py  run_examples_notebooks_24h.py  run_fluidity_giesekus_notebooks.py  run_hl_stz_notebooks.py  run_hvm_notebooks.py  run_hvnm_notebooks.py  run_ikh_fikh_notebooks.py  run_itt_mct_notebooks.py  run_notebook_simple.py  run_notebooks.py  run_oreo.R  run_profiling.py  run_rheojax.py  run_single_notebook_96h.py  run_sppplus_v2p1.m  run_timeout_notebooks_72h.py  run_tnt_notebooks.py  run_vlb_notebooks.py  test_notebooks.py  update_tnt_notebooks.py  validate_model_docs.py
tests/: __init__.py  conftest.py  test_fit_result.py  test_import.py  test_notebook_execution_consistency.py  test_performance_f9.py  test_project_structure.py
(+1918 files in other folders)
