[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rheojax"
version = "0.6.0"
description = "Unified rheological analysis framework with JAX acceleration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

# ============================================================================
# GPU ACCELERATION (20-100x speedup for large datasets)
# ============================================================================
# Default: CPU-only JAX (works on ALL platforms: Linux, macOS, Windows)
#
# For GPU acceleration (Linux + NVIDIA GPU + System CUDA):
#
#   Prerequisites:
#     - System CUDA 12.x or 13.x installed (nvcc in PATH)
#     - NVIDIA GPU with SM >= 5.2 (Maxwell or newer)
#
#   Quick install (from repository):
#     make install-jax-gpu          # Auto-detect system CUDA version
#     make install-jax-gpu-cuda13   # Force CUDA 13 (requires system CUDA 13.x)
#     make install-jax-gpu-cuda12   # Force CUDA 12 (requires system CUDA 12.x)
#
#   Manual install (uses system CUDA):
#     pip uninstall -y jax jaxlib
#     pip install "jax[cuda13-local]"  # If system has CUDA 13.x
#     pip install "jax[cuda12-local]"  # If system has CUDA 12.x
#
#   GPU Compatibility:
#     CUDA 13 (SM 7.5+): RTX 20xx/30xx/40xx, T4, A100, H100, L40
#     CUDA 12 (SM 5.2+): GTX 9xx/10xx, P100, V100, plus all CUDA 13 GPUs
#
#   Platform support:
#     - Linux + NVIDIA GPU + System CUDA: Full GPU acceleration
#     - Windows WSL2: Experimental support (Linux wheels)
#     - macOS: CPU-only (no NVIDIA GPU support)
#     - Windows native: CPU-only (no pre-built wheels)
#
#   Verify your CUDA installation:
#     nvcc --version        # Should show CUDA 12.x or 13.x
#     nvidia-smi            # Should show your GPU
#
# See README.md for detailed GPU installation guide
# ============================================================================
dependencies = [
    # Core scientific computing
    "numpy>=2.3.0,<3.0.0",
    "scipy>=1.16.0,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",

    # GPU-accelerated optimization (CRITICAL: must be imported before JAX)
    # NLSQ v0.3.0+ uses float32 by default with automatic precision fallback
    # RheoJAX explicitly enables float64 via jax.config.update("jax_enable_x64", True)
    "nlsq>=0.6.0",

    # JAX ecosystem (CPU-only - works on all platforms)
    # GPU users: see installation instructions above
    "jax>=0.8.0",     # JAX 0.8.0+ for CUDA 12/13 support
    "jaxlib>=0.8.0",  # jaxlib 0.8.0+ - must be compatible with JAX version

    # Probabilistic programming
    "numpyro>=0.19.0,<1.0.0",

    # Bayesian visualization and diagnostics
    "arviz>=0.23.0,<1.0.0",
    "arviz-base>=0.7.0",
    "arviz-stats>=0.7.0",
    "arviz-plots>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.150.0",
    "black>=25.12.0",
    "ruff>=0.14.10",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.0",
    "sphinx>=8.2.0",
    "furo>=2024.8.0",
    "sphinx-autodoc-typehints>=3.5.0",
]
ml = [
    "scikit-learn>=1.8.0",
]
io = [
    "h5py>=3.15.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]
gui = [
    "PySide6>=6.6.0",
    "matplotlib>=3.10.0",
    "qasync>=0.28.0",
]
gui-dev = [
    "pytest-qt>=4.5.0",
    "pytest-image-diff>=0.0.14",
]
# NOTE: No gpu extra - GPU installation must be done manually to avoid conflicts.
# See GPU ACCELERATION section above for installation instructions.
# Use: make install-jax-gpu (from repository) or manual pip commands.
all = [
    "rheojax[dev,ml,io,gui,gui-dev]",
]

[project.scripts]
rheojax = "rheojax.cli.main:main"
rheojax-gui = "rheojax.gui.main:main"

[project.urls]
"Homepage" = "https://github.com/imewei/rheojax"
"Bug Tracker" = "https://github.com/imewei/rheojax/issues"
"Documentation" = "https://rheojax.readthedocs.io"
"Source Code" = "https://github.com/imewei/rheojax"

[tool.setuptools.packages.find]
include = ["rheojax", "rheojax.*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"rheojax" = ["py.typed", "*.json", "*.yaml"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=rheojax",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--dist=loadscope",  # Distribute tests by scope for better load balancing
    "--maxfail=10",      # Stop after 10 failures to save time
]
# Performance optimizations
cache_dir = ".pytest_cache"  # Explicit cache directory
console_output_style = "progress"  # Cleaner output during parallel execution
markers = [
    # Test tier markers (for tiered CI strategy)
    "smoke: critical unit tests only (< 2 min target, ~100 tests)",
    "unit: unit tests (default tier for most tests)",
    "integration: integration tests across modules",
    "validation: validation against legacy packages (pyrheo, hermes-rheo)",
    "benchmark: performance benchmarks",

    # Execution characteristics
    "slow: marks tests as slow (> 30 seconds each, deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",

    # Notebook tests
    "notebook_smoke: quick notebook smoke tests",
    "notebook_comprehensive: comprehensive notebook validation (slow)",

    # I/O tests
    "io: file I/O tests",

    # Model-specific tests
    "sgr: SGR (Soft Glassy Rheology) model tests",
    "spp: SPP (Sequence of Physical Processes) model/transform tests",
]
filterwarnings = [
    # Expected warnings from tests
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
    "ignore:More than 20 figures have been opened:RuntimeWarning",
    "ignore:There are not enough devices to run parallel chains:UserWarning",
    "ignore:Out-of-support values provided to log prob method:UserWarning",
    "ignore:Could not automatically detect test mode:UserWarning",
    "ignore:Failed to process.*File not found:UserWarning",
    "ignore:Data has no positive values.*cannot be log-scaled:UserWarning",
    "ignore:x-axis is not monotonic:UserWarning",
    # Suppress pytest collection warnings for non-test classes
    "ignore:cannot collect test class.*TestModeEnum.*:pytest.PytestCollectionWarning",
    # Suppress warnings from dependencies
    "ignore:invalid value encountered:RuntimeWarning:scipy",
    "ignore:invalid value encountered:RuntimeWarning:nlsq",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.eggs
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "C", "E", "F", "W"]
"rheojax/__init__.py" = ["E402"]  # models import must come after version setup
"rheojax/models/*.py" = ["E402"]  # safe_import_jax() must precede JAX imports
"rheojax/utils/mittag_leffler.py" = ["E402"]  # safe_import_jax() must precede JAX imports
"rheojax/transforms/*.py" = ["E402"]  # safe_import_jax() may precede other imports
"rheojax/utils/initialization/*.py" = ["E402"]  # initialization modules
"examples/**/*.ipynb" = ["B", "C", "E", "F", "W"]  # Example notebooks have looser style requirements
"docs/source/conf.py" = ["F401"]  # Sphinx config checks imports for availability

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Allow Any returns for JAX arrays
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["rheojax.models.*", "rheojax.utils.mittag_leffler"]
disable_error_code = ["name-defined", "no-any-return"]
